yaml/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appidsample
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appidsample
      version: current
  template:
    metadata:
      labels:
        app: appidsample
        version: current
    spec:
      containers:
      - name: appidsample
        image: us.icr.io/<registry name space>/appidsample:1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
